# uncertml_to_physiome

./: CellML2UncertML.hs  MathML.hs  ParsingSupport.hs  UncertML.hs  UncertML2CellML.hs  uncertml_to_physiome.cabal
testcases/mathml-for-cellml/: BernoulliDistribution.mml  BetaDistribution.mml  BinomialDistribution.mml  CauchyDistribution.mml  ChisquareDistribution.mml  DirichletDistribution.mml  ExponentialDistribution.mml  FDistribution.mml  GammaDistribution.mml  GeometricDistribution.mml  HypergeometricDistribution.mml  InverseGammaDistribution.mml  LaplaceDistribution.mml  LogNormalDistribution.mml  LogisticDistribution.mml  MixtureModel.mml  MultinomialDistribution.mml  MultivariateNormalDistribution.mml  NegativeBinomialDistribution.mml  NormalDistribution.mml  NormalInverseGammaDistribution.mml  ParetoDistribution.mml  PoissonDistribution.mml  StudentTDistribution.mml  UniformDistribution.mml  WeibullDistribution.mml  realisations.mml
testcases/uncertml/: BernoulliDistribution.xml  BetaDistribution.xml  BinomialDistribution.xml  CauchyDistribution.xml  ChisquareDistribution.xml  DirichletDistribution.xml  ExponentialDistribution.xml  FDistribution.xml  GammaDistribution.xml  GeometricDistribution.xml  HypergeometricDistribution.xml  InverseGammaDistribution.xml  LaplaceDistribution.xml  LogNormalDistribution.xml  LogisticDistribution.xml  MixtureModel.xml  MultinomialDistribution.xml  MultivariateNormalDistribution.xml  MultivariateStudentTDistribution.xml  NegativeBinomialDistribution.xml  NormalDistribution.xml  NormalInverseGammaDistribution.xml  schemas.xml  (+9 more)
